examples/invalid/12_local_function_forward_reference.lane
// invalid: local named functions are sequential and cannot be called before declaration
module Examples.Invalid12

pub fn bad(value : Int) -> Int {
  let result : Int = helper(value)
  fn helper(x : Int) -> Int {
    x
  }
  result
}
